# multi-agent-memory-simulator

./: .gitignore  Makefile  README.md  evaluation.md  pyproject.toml  semantic_coherence.md  test.py
docs/milestones/: m0_scopelock.md
scenarios/: eval_matrix.py  eval_mesi.py  eval_pipeline.py  plot.py  plot_judge_metrics.py  trace.py  workload_deterministic_judge.py  workload_llm_judge.py  workload_mesi.py
src/: main.py
src/memory/: __init__.py  dependency.py  events.py  lib.py  memory_sim.py  model.py  protocols.py  semantic.py  simulator.py  workload.py
src/memory/protocols/: __init__.py  base.py  eventual.py  hybrid.py  mesi.py  strong.py
src/memory/protocols/judges/: __init__.py  deterministic.py  llm.py  types.py
src/runtime/: __init__.py
src/runtime/config/: __init__.py  settings.py
src/runtime/control_api/: __init__.py  interface.py
src/runtime/event_journal/: __init__.py  interface.py
src/runtime/judge_service/: __init__.py  interface.py
src/runtime/memory_service.py/: __init__.py  interface.py
src/runtime/orchestrator/: __init__.py  interface.py
src/runtime/schemas/: __init__.py  enums.py  events.py
tests/: test_conflict_judge.py  test_deterministic.py  test_eventual_protocol.py  test_llm.py  test_mesi.py  test_sync_invalidate.py  test_trace.py
