[build-system]
requires = ["setuptools>=68", "llist"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-memory-simulator"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
